--- a/application-dev.yml
+++ b/application-dev.yml
@@ -19,7 +19,7 @@ spring:
     password: guest
   redis:
     host: paascloud-db-redis
-    password: paascloud@redis
+    password: paascloud@redis1
     port: 6379
     timeout: 0
   datasource:
